force-app/main/default/objects/Ticket__c/fields/foodpreference__c.field-meta.xml
<CustomField>
    <fullName>foodpreference__c</fullName>
    <label>foodpreference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>