force-app/main/default/objects/Ticket__c/fields/Invoicenumber__c.field-meta.xml
<CustomField>
    <fullName>Invoicenumber__c</fullName>
    <label>Invoicenumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>