force-app/main/default/objects/Ticket__c/fields/Passenger_Id__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Id__c</fullName>
    <label>Passenger Id</label>
    <referenceTo>Passenger__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>