force-app/main/default/objects/Ticket__c/validationRules/Food_preference_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Food_preference_rule</fullName>
    <active>true</active>
    <errorConditionFormula>Fare__c &gt; 5000 &amp;&amp; ISBLANK( foodpreference__c )</errorConditionFormula>
    <errorDisplayField>foodpreference__c</errorDisplayField>
    <errorMessage>Fare is greater than 5000 food preference as is required</errorMessage>
</ValidationRule>