force-app/main/default/objects/Ticket__c/validationRules/From_and_To_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>From_and_To_Validation_Rule</fullName>
    <active>true</active>
    <description>Validation for From and To Text Field</description>
    <errorConditionFormula>OR (ISBLANK( From__c ), ISBLANK( To__c ))</errorConditionFormula>
    <errorMessage>From and To Field cannot be blank</errorMessage>
</ValidationRule>